2004-04-19  Bruno Haible  <bruno@clisp.org>

	* gettext.m4: Change jm_ to gl_ in AC_DEFINE'd names. Update all uses.

2004-04-19  Bruno Haible  <bruno@clisp.org>

	* inttypes_h.m4: Change jm_ to gl_ in cache variables as well.
	* stdint_h.m4: Likewise.
	* uintmax_t.m4: Likewise.

2004-04-18  Jim Meyering  <jim@meyering.net>

	* glibc21.m4: Change jm_ to gl_ in AC_DEFINE'd names. Update all uses.
	* intmax.m4: Likewise.
	* inttypes_h.m4: Likewise.
	* longlong.m4: Likewise.
	* stdint_h.m4: Likewise.
	* uintmax_t.m4: Likewise.
	* ulonglong.m4: Likewise.

2004-03-02  Bruno Haible  <bruno@clisp.org>

	* po.m4 (AM_POSTPROCESS_PO_MAKEFILE): For RESOURCESDLLFILES and
	CSHARPCATALOGS, extend the lang -> frobbedlang mapping so as to support
	Serbian and Uzbek locales.

2004-02-18  Bruno Haible  <bruno@clisp.org>

	* xsize.m4 (gl_XSIZE): Require AC_C_INLINE.
	Reported by Derek Robert Price <derek@ximbiot.com>.

2004-02-02  Bruno Haible  <bruno@clisp.org>

	* glibc2.m4: New file.
	* gettext.m4 (AM_INTL_SUBDIR): Require gt_GLIBC2.
	* Makefile.am (EXTRA_DIST): Add glibc2.m4.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2003-12-26  Bruno Haible  <bruno@clisp.org>

	Support for C#.
	* po.m4 (AM_POSTPROCESS_PO_MAKEFILE): Substitute also the variables
	RESOURCESDLLFILES and CSHARPCATALOGS. Add rules for each member of
	CSHARPCATALOGS.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-16  Bruno Haible  <bruno@clisp.org>

	* printf-posix.m4 (gt_PRINTF_POSIX): Guess correctly when cross-
	compiling to Cygwin.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-23  Bruno Haible  <bruno@clisp.org>

	* ssize_t.m4: Remove file, moved to ../../gettext-tools/m4/.
	* gettext.m4 (AM_INTL_SUBDIR): Don't require gt_TYPE_SSIZE_T.
	* Makefile.am (EXTRA_DIST): Remove ssize_t.m4.

2003-11-19  Bruno Haible  <bruno@clisp.org>
