@@ -1,3 +1,9 @@
+2004-05-16  Bruno Haible  <bruno@clisp.org>
+
+	* lcmessage.m4 (gt_LC_MESSAGES): Renamed from AM_LC_MESSAGES.
+	* gettext.m4 (AM_INTL_SUBDIR): Update.
+	Suggested by Alexandre Duret-Lutz.
+
 2004-04-19  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.m4: Change jm_ to gl_ in AC_DEFINE'd names. Update all uses.
